<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tsitsi.jmtvehiclelicenserenewal.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.widget.LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:outlineProvider="bounds"
                android:textColor="#008080"/>

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/firstNameEditText"
                android:layout_alignStart="@+id/firstNameEditText"
                android:layout_below="@+id/firstNameEditText"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textColor="#008080"/>

            <EditText
                android:id="@+id/vehicleBookNumEditText"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/lastNameEditText"
                android:layout_alignStart="@+id/lastNameEditText"
                android:layout_below="@+id/lastNameEditText"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:hint="@string/vehicle_book_no"
                android:inputType="textPersonName"
                android:textColor="#008080"/>

            <EditText
                android:id="@+id/vehicleRegNumEditText"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/vehicleBookNumEditText"
                android:layout_alignStart="@+id/vehicleBookNumEditText"
                android:layout_below="@+id/vehicleBookNumEditText"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:hint="@string/vehicle_reg_no"
                android:inputType="textPersonName"
                android:textColor="#008080"/>

            <EditText
                android:id="@+id/paymentDurationEditText"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/vehicleRegNumEditText"
                android:layout_alignStart="@+id/vehicleRegNumEditText"
                android:layout_below="@+id/vehicleRegNumEditText"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:hint="@string/payment_duration_months"
                android:inputType="textPersonName"
                android:textColor="#008080"/>

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/paymentDurationEditText"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/paymentDurationEditText"
                android:layout_gravity="center"
                android:layout_marginTop="41dp"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:textColor="#008080"/>

            <android.widget.LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="41dp"
                    android:layout_weight="0.74"
                    android:background="#008080"
                    android:text="@string/submit"
                    android:textColor="#ffffffff"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/invisiblePaymentButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="41dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/proceed_to_payment"/>

            </android.widget.LinearLayout>

        </android.widget.LinearLayout>
    </ScrollView>
</android.widget.RelativeLayout>
